Margin issues on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -2311,6 +2311,10 @@ h2 + h3 .custom-anchor-link {
 }
 
 @media only screen and (min-width: 0px) and (max-width: 599px) {
+  main .container {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
   .intro-main-content h2 {
     padding: 0 10px 10px;
     margin: 0px;
